--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Me | console:log</title>
+    <title>about fern | console:log</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,7 +26,7 @@
             web development from scratch.
         </p><br />
 
-        <h3>What I'm Learning</h3>
+        <h3>what i'm learning</h3>
         <ul>
             <li>Full-Stack Web Development</li>
             <li>HTML & CSS fundamentals</li>
@@ -38,11 +38,11 @@
 
         </ul><br />
 
-        <h3>Why Terminal Style?</h3>
+        <h3>why terminal style?</h3>
         <p>I love the clean, minimalist aesthetic of terminal interfaces — plus, it feels fitting for documenting my
             coding journey. No flashy design, just me and the code.</p><br />
 
-        <h3>Where to Find Me</h3>
+        <h3>where to find me</h3>
         <ul>
             <li><a href="https://github.com/fern-d3v" target="_blank">github</a></li>
             <li><a href="https://www.instagram.com/f_ern.h/" target="_blank">instagram</a></li>
