--- a/aboutme.html
+++ b/aboutme.html
@@ -17,13 +17,13 @@
         <p>Hey, I'm fern-d3v — a web development student documenting my journey into full-stack development here on
             <pstrong>console.log</pstrong>.</p><br />
 
-        <p>After years in customer service and sales, I decided it was time to pivot. I've always been curious about how
-            websites work and how they integrate into our everyday lives, so I opened a door (or you could say a
-            console).</p><br />
+        <p>Naturally, as a nerdy person (I love ttrpg, fantasy reading, video games), I enjoy all things tech. One of my more niche enjoyments is learning new pathways of tech.
+        Web Development just felt like the right choice for me to make when reassessing my career. It has multiple unique languages to learn as well as a whole new set of best 
+        practices (languages and rules are wonderful arent they?) to learn, which makes it interesting enough that my brain won't get bored of it.</p><br />
 
         <p>This blog is where I track my progress, share my struggles, and celebrate small wins. I'm building
-            <strong>console.log</strong> not just as a portfolio, but as a record of what it really looks like to learn
-            web development from scratch.
+            <strong>console.log</strong> as a record of what it really looks like to learn
+            web development from scratch. Through this I will learn how to become a Full-Stack Web Developer!
         </p><br />
 
         <h3>what i'm learning</h3>
