--- a/aboutme.html
+++ b/aboutme.html
@@ -14,8 +14,7 @@
 
     <main class="terminal-body">
         <h1>about fern</h1>
-        <p>Hey, I'm fern-d3v — a web development student documenting my journey into full-stack development here on
-            <pstrong>console.log</pstrong>.</p><br />
+        <p>Hey, I'm fern-d3v — a web development student documenting my journey into full-stack development here on <strong>console.log</strong>.</p><br />
 
         <p>Naturally, as a nerdy person (I love ttrpg, fantasy reading, video games), I enjoy all things tech. One of my more niche enjoyments is learning new pathways of tech.
         Web Development just felt like the right choice for me to make when reassessing my career. It has multiple unique languages to learn as well as a whole new set of best 
