--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer class="terminal-footer">
-    <p><a href="https://fern-d3v.github.io/">fern-d3v</a> • <a href="aboutme.html">about fern</a> • <a href="https://github.com/fern-d3v">GitHub</a></p>
+    <p><a href="https://fern-d3v.github.io/" target="_blank">fern-d3v</a> • <a href="aboutme.html">about fern</a> • <a href="https://github.com/fern-d3v" target="_blank">GitHub</a></p>
   </footer>
 </body>
 
