--- a/aboutme.html
+++ b/aboutme.html
@@ -14,11 +14,15 @@
 
     <main class="terminal-body">
         <h1>about fern</h1>
-        <p>Hey, I'm fern-d3v — a web development student documenting my journey into full-stack development here on <strong>console.log</strong>.</p><br />
+        <p>Hey, I'm fern-d3v — a web development student documenting my journey into full-stack development here on
+            <strong>console.log</strong>.</p><br />
 
-        <p>Naturally, as a nerdy person (I love ttrpg, fantasy reading, video games), I enjoy all things tech. One of my more niche enjoyments is learning new pathways of tech.
-        Web Development just felt like the right choice for me to make when reassessing my career. It has multiple unique languages to learn as well as a whole new set of best 
-        practices (languages and rules are wonderful arent they?) to learn, which makes it interesting enough that my brain won't get bored of it.</p><br />
+        <p>Naturally, as a nerdy person (I love ttrpg, fantasy reading, video games), I enjoy all things tech. One of my
+            more niche enjoyments is learning new pathways of tech.
+            Web Development just felt like the right choice for me to make when reassessing my career. It has multiple
+            unique languages to learn as well as a whole new set of best
+            practices (languages and rules are wonderful arent they?) to learn, which makes it interesting enough that
+            my brain won't get bored of it.</p><br />
 
         <p>This blog is where I track my progress, share my struggles, and celebrate small wins. I'm building
             <strong>console.log</strong> as a record of what it really looks like to learn
@@ -54,8 +58,9 @@
     </main>
 
     <footer class="terminal-footer">
-        <p><a href="https://fern-d3v.github.io/">fern-d3v</a> • <a href="aboutme.html">about fern</a> • <a
-                href="https://github.com/fern-d3v">GitHub</a></p>
+        <p><a href="https://fern-d3v.github.io/" target="_blank">fern-d3v</a> • <a href="aboutme.html">about fern</a> •
+            <a href="https://github.com/fern-d3v" target="_blank">GitHub</a>
+        </p>
     </footer>
 </body>
 
